ast/src/snapshots/ast__parser__tests__function_definition_snapshots@parameters.snap
---
source: ast/src/parser.rs
expression: "parse(\"fn main(argc: u8, arcv: [String]) -> void { }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private,
            ),
            external: false,
            name: Identifier {
                name: "main",
            },
            parameters: [
                Parameter {
                    name: Identifier {
                        name: "argc",
                    },
                    param_type: Scalar(
                        ScalarType {
                            name: "u8",
                        },
                    ),
                },
                Parameter {
                    name: Identifier {
                        name: "arcv",
                    },
                    param_type: Array(
                        ArrayType {
                            element_type: Scalar(
                                ScalarType {
                                    name: "String",
                                },
                            ),
                        },
                    ),
                },
            ],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                },
            ),
            block: Block {
                statements: [],
            },
        },
    ),
]
