ast/src/snapshots/ast__parser__tests__function_definition_snapshots@pub_modifier.snap
---
source: ast/src/parser.rs
expression: "parse(\"pub fn main() -> void {}\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Public(
                Public {
                    location: Location(
                        0..3,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    7..11,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        17..21,
                    ),
                },
            ),
            block: Block {
                statements: [],
                location: Location(
                    22..24,
                ),
            },
            location: Location(
                0..24,
            ),
        },
    ),
]
