ast/src/snapshots/ast__parser__tests__function_definition_snapshots@statement.snap
---
source: ast/src/parser.rs
expression: "parse(\"fn main() -> void { let a = 0 }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private,
            ),
            external: false,
            name: Identifier {
                name: "main",
            },
            parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                },
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "a",
                            },
                            variable_type: None,
                            value: Literal(
                                Int(
                                    IntLiteral {
                                        value: 0,
                                    },
                                ),
                            ),
                            is_const: false,
                        },
                    ),
                ],
            },
        },
    ),
]
