ast/src/snapshots/ast__parser__tests__generic_class_snapshots@missing_comma.snap
---
source: ast/src/parser.rs
expression: "parse_err(\"class Test<T1 T2> {}\")"
---
UnexpectedToken {
    source: NamedSource {
        name: "<test>",
        content: "class Test<T1 T2> {}",
    },
    range: 14..16,
    expected: ,,
    actual: identifier,
}
