ast/src/snapshots/ast__parser__tests__generic_class_snapshots@multiple_generics.snap
---
source: ast/src/parser.rs
expression: "parse(\"class Test<T1, T2> {}\")"
---
[
    TypeDefinition(
        Class(
            ClassDefinition {
                name: Identifier {
                    name: "Test",
                    location: Location(
                        6..10,
                    ),
                },
                builtin: false,
                members: [],
                type_parameters: [
                    TypeParameter {
                        name: Identifier {
                            name: "T1",
                            location: Location(
                                11..13,
                            ),
                        },
                    },
                    TypeParameter {
                        name: Identifier {
                            name: "T2",
                            location: Location(
                                15..17,
                            ),
                        },
                    },
                ],
                location: Location(
                    0..21,
                ),
            },
        ),
    ),
]
